Update Task 4 based on Lutz' code

--- a/task4.ipynb
+++ b/task4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -11,15 +11,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-31T18:12:12.953695100Z",
-     "start_time": "2023-12-31T18:12:12.592414300Z"
+     "end_time": "2024-01-01T17:16:51.135689700Z",
+     "start_time": "2024-01-01T17:16:50.597778300Z"
     }
    },
    "id": "269a972f9f0591ab"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Funktion zum Einlesen der Daten aus der Datei\n",
@@ -30,15 +30,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-31T18:12:13.818458400Z",
-     "start_time": "2023-12-31T18:12:13.815833100Z"
+     "end_time": "2024-01-01T17:16:51.953333100Z",
+     "start_time": "2024-01-01T17:16:51.953333100Z"
     }
    },
    "id": "91042928720b074c"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -65,13 +65,13 @@
     "plt.xscale('log')\n",
     "plt.ylim(0)\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-31T18:47:23.582514300Z",
-     "start_time": "2023-12-31T18:47:23.238244600Z"
+     "end_time": "2024-01-01T17:16:53.363731Z",
+     "start_time": "2024-01-01T17:16:52.722354700Z"
     }
    },
    "id": "ad5ae9d2e72c9dd5"
