Update Task 3 based on Lutz' code. There is still some problems.

--- a/task3.ipynb
+++ b/task3.ipynb
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Phuoc Khang\\AppData\\Local\\Temp\\ipykernel_10884\\1367560415.py:67: RuntimeWarning: divide by zero encountered in divide\n",
+      "C:\\Users\\Phuoc Khang\\AppData\\Local\\Temp\\ipykernel_10884\\2228505321.py:83: RuntimeWarning: divide by zero encountered in divide\n",
       "  power_exponent = np.gradient(np.log(abs(current))) / np.gradient(np.log(abs(voltage)))\n"
      ]
     }
@@ -55,7 +55,7 @@
     "current = df['current (A)']\n",
     "time = df['time (s)']\n",
     "\n",
-    "# Divide Voltage into cycles\n",
+    "# Divide voltage into 12 cycles\n",
     "voltage_cycle_I = voltage[:196]\n",
     "voltage_cycle_II = voltage[195:417]\n",
     "voltage_cycle_III = voltage[416:662]\n",
@@ -69,7 +69,7 @@
     "voltage_cycle_XI = voltage[2105:2401]\n",
     "voltage_cycle_XII = voltage[2400:]\n",
     "\n",
-    "# Divide Time into cycles\n",
+    "# Divide time into 12 cycles\n",
     "time_cycle_I = time[:196]\n",
     "time_cycle_II = time[195:417]\n",
     "time_cycle_III = time[416:662]\n",
@@ -83,7 +83,7 @@
     "time_cycle_XI = time[2105:2401]\n",
     "time_cycle_XII = time[2400:]\n",
     "\n",
-    "# Divide Current into cycles\n",
+    "# Divide current into 12 cycles\n",
     "current_cycle_I = current[:196]\n",
     "current_cycle_II = current[195:417]\n",
     "current_cycle_III = current[416:662]\n",
@@ -97,7 +97,7 @@
     "current_cycle_XI = current[2105:2401]\n",
     "current_cycle_XII = current[2400:]\n",
     "\n",
-    "# Compute all needed values\n",
+    "# Compute resistance values in 12 cycles\n",
     "resistance_cycle_I = voltage_cycle_I / current_cycle_I \n",
     "resistance_cycle_II = voltage_cycle_II / current_cycle_II \n",
     "resistance_cycle_III = voltage_cycle_III / current_cycle_III\n",
@@ -111,10 +111,8 @@
     "resistance_cycle_XI = voltage_cycle_XI / current_cycle_XI \n",
     "resistance_cycle_XII = voltage_cycle_XII / current_cycle_XII \n",
     "\n",
-    "resistance = voltage / current\n",
-    "\n",
+    "# Compute needed values for plotting\n",
     "log_abs_voltage = np.log(abs(df['voltage (V)']))\n",
-    "\n",
     "sqrt_voltage = np.sign(voltage) * np.sqrt(abs(voltage))\n",
     "power_exponent = np.gradient(np.log(abs(current))) / np.gradient(np.log(abs(voltage)))\n",
     "# power_exponent = np.gradient(np.log(abs(current)), np.log(abs(voltage)))"
@@ -122,8 +120,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-01T14:12:21.889175200Z",
-     "start_time": "2024-01-01T14:12:21.884287Z"
+     "end_time": "2024-01-01T17:56:38.199171500Z",
+     "start_time": "2024-01-01T17:56:38.169757400Z"
     }
    },
    "id": "3f995ba09dfc379a"
