--- a/task5.ipynb
+++ b/task5.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "id": "581d05813b824309"
   },
   {
    "cell_type": "markdown",
